Changed close button placement to prevent overlap

--- a/client/stylesheets/_SectionProjects.scss
+++ b/client/stylesheets/_SectionProjects.scss
@@ -37,11 +37,14 @@
         right: 5px;
       }
 
+      // Project title.
       .title {
         padding: 5px 0 5px 0;
         font-weight: bold;
+        margin-top: 10px;
       }
 
+      // Project description.
       .description {
         padding: 5px 0 5px 0;
       }
